# asti

./: .fips-settings.yml  .travis.yml  CMakeLists.txt  ConsoleApplication1.cpp  LICENSE  README.md  appveyor.yml  biicode.conf  box.hpp  bspline.cpp  bspline.hpp  bspline_inst.cpp  bspline_ops.cpp  bspline_ops.hpp  bspline_ops_inst.cpp  bspline_surface.hpp  circle.hpp  fips.cmd  fips.yml  geom_exception.hpp  line.hpp  periodic_spline.cpp  periodic_spline.hpp  point.cpp  point.hpp  rational_bspline.cpp  rational_bspline.hpp  rmat.cpp  rmat.hpp  smat.hpp  spline_traits.hpp  temp.el  todo.md  tol.hpp  top.cpp  util.hpp
include/: any_curve.hpp  arclength.hpp  back_n_inserter.hpp  banded_solve.hpp  bezier_form.hpp  box.hpp  box_compute.hpp  bspline.hpp  bspline_cons.hpp  bspline_fwd.hpp  bspline_ops.hpp  bspline_queries.hpp  bspline_surface.hpp  bspline_x_cons.hpp  change_basis.hpp  circle.hpp  combinations.hpp  conic.hpp  constant_iterator.hpp  expected.hpp  extruded_surf.hpp  find_param.hpp  geom_exception.hpp  geometric_spline.hpp  hodograph.hpp  implicit.hpp  insert_knot.hpp  integrate1d.hpp  legendre_form.hpp  line.hpp  match_case.hpp  match_maker.hpp  modify_bspline.hpp  monomial_form.hpp  periodic_bspline.hpp  periodic_bspline_cons.hpp  point.hpp  point_dim.hpp  point_fwd.hpp  point_iter_traits.hpp  (+32 more)
src/: ConsoleApplication1.cpp  back_n_inserter.hpp  banded_solve.hpp  box.hpp  box_compute.cpp  box_compute.hpp  box_compute_inst.cpp  box_compute_inst.inl  bspline.cpp  bspline.hpp  bspline_cons.hpp  bspline_fwd.hpp  bspline_inst.cpp  bspline_inst.inl  bspline_ops.hpp  bspline_ops_inst.cpp  bspline_queries.cpp  bspline_queries.hpp  bspline_queries_inst.cpp  bspline_queries_inst.inl  bspline_surface.hpp  bspline_x_cons.hpp  circle.cpp  circle.hpp  circle_inst.inl  conic.cpp  conic.hpp  constant_iterator.hpp  find_param.cpp  geom_exception.cpp  geom_exception.hpp  hodograph.cpp  hodograph_inst.inl  implicit.cpp  insert_knot.cpp  insert_knot.hpp  insert_knot_inst.cpp  insert_knot_inst.inl  integrate1d.cpp  line.cpp  (+65 more)
src/scripts/: indent.el  temp.el
test/: approxtest.cpp  basischangetest.cpp  beziertest.cpp  boxtest.cpp  conictest.cpp  evaltest.cpp  implicittest.cpp  lentest.cpp  main.cpp  paramtest.cpp  psplinetest.cpp  raisedegreetest.cpp  reducedegreetest.cpp  surfacetest.cpp  tessellatetest.cpp  testutils.hpp  trimextendjointest.cpp
